--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
 
 input {
   padding: 0.5rem;
-  margin: 0.5rem;
+  margin: 0.25rem 0.25rem 0.25rem 0.5rem;
   font-size: large;
 }
 
@@ -12,7 +12,7 @@ textarea {
   width: 95%;
   max-width: 1000px;
   min-height: 300px;
-  margin: 0.5rem;
+  margin: 0.25rem 0.25rem 0.25rem 0.5rem;
   font-size: large;
   padding: 0.5rem;
 }
@@ -24,5 +24,5 @@ p {
 button {
   padding: 0.5rem;
   cursor: pointer;
-  margin: 0.5rem;
+  margin: 0.25rem 0.25rem 0.25rem 0.5rem;
 }
