--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 nav {
   background-color: #f8f8f8;
-  padding: 10px;
+  padding: 0px;
 }
 
 nav a {
@@ -11,6 +11,7 @@ nav a {
   font-weight: bold;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  margin: 0px 0px;
 }
 
 nav a:hover {
