--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,7 @@ nav a.active {
     border-color: lightgray;
     border-radius: 5px;
     margin: 5px;
+    padding: 20px;
 }
 
 .eventoContainer {
